--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             background: rgba(255, 255, 255, 0.95);
             border-radius: 20px;
             box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
-            transition: transform 0.5s ease;
+            transition: transform 0.5 ease;
         }
 
         /* 登录表单 */
@@ -39,7 +39,7 @@
             border: 2px solid #ffcccc;
             border-radius: 50px;
             font-size: 16px;
-            transition: all 0.3s;
+            transition: all 0.3;
         }
         .login-form input:focus {
             border-color: #ff6b6b;
@@ -54,7 +54,7 @@
             border-radius: 50px;
             font-size: 18px;
             cursor: pointer;
-            transition: transform 0.3s;
+            transition: transform 0.3;
         }
 
         /* 生日祝福页面 */
@@ -63,7 +63,7 @@
             padding: 20px;
         }
         .heart-icon {
-            animation: beat 1.5s infinite;
+            animation: beat 1.5 infinite;
             color: #ff4757;
             font-size: 4em;
             text-align: center;
@@ -75,7 +75,7 @@
             50% { transform: scale(1.2); }
         }
         .error-shake {
-            animation: shake 0.5s;
+            animation: shake 0.5;
             border-color: #ff4444 !important;
         }
         @keyframes shake {
@@ -99,7 +99,7 @@
             list-style: none;
             background-color: rgba(50, 46, 46, 0.15);
             bottom: -100px;
-            animation: square 20s infinite;
+            animation: square 20 infinite;
             transition-timing-function: linear;
         }
         @keyframes square {
@@ -112,14 +112,14 @@
                 opacity: 0;
             }
         }
-        .bg-bubbles li:nth-child(1) { left: 10%; width: 40px; height: 40px; animation-delay: 2s; }
-        .bg-bubbles li:nth-child(2) { left: 20%; width: 60px; height: 60px; animation-delay: 4s; }
-        .bg-bubbles li:nth-child(3) { left: 25%; width: 20px; height: 20px; animation-delay: 1s; }
-        .bg-bubbles li:nth-child(4) { left: 40%; width: 50px; height: 50px; animation-delay: 6s; }
-        .bg-bubbles li:nth-child(5) { left: 70%; width: 40px; height: 40px; animation-delay: 3s; }
-        .bg-bubbles li:nth-child(6) { left: 80%; width: 60px; height: 60px; animation-delay: 8s; }
-        .bg-bubbles li:nth-child(7) { left: 32%; width: 25px; height: 25px; animation-delay: 5s; }
-        .bg-bubbles li:nth-child(8) { left: 55%; width: 35px; height: 35px; animation-delay: 7s; }
+        .bg-bubbles li:nth-child(1) { left: 10%; width: 40px; height: 40px; animation-delay: 2; }
+        .bg-bubbles li:nth-child(2) { left: 20%; width: 60px; height: 60px; animation-delay: 4; }
+        .bg-bubbles li:nth-child(3) { left: 25%; width: 20px; height: 20px; animation-delay: 1; }
+        .bg-bubbles li:nth-child(4) { left: 40%; width: 50px; height: 50px; animation-delay: 6; }
+        .bg-bubbles li:nth-child(5) { left: 70%; width: 40px; height: 40px; animation-delay: 3; }
+        .bg-bubbles li:nth-child(6) { left: 80%; width: 60px; height: 60px; animation-delay: 8; }
+        .bg-bubbles li:nth-child(7) { left: 32%; width: 25px; height: 25px; animation-delay: 5; }
+        .bg-bubbles li:nth-child(8) { left: 55%; width: 35px; height: 35px; animation-delay: 7; }
 
         /* 照片轮播 */
         .img-ul {
@@ -127,7 +127,7 @@
             width: 100%;
             height: 100%;
             transform-style: preserve-3d;
-            animation: rotate 20s infinite linear;
+            animation: rotate 20 infinite linear;
         }
         .img-li {
             position: absolute;
@@ -139,7 +139,7 @@
             list-style: none;
             border: 5px solid white;
             box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
-            transition: all 1s;
+            transition: all 1;
         }
         .img-li img {
             width: 100%;
@@ -274,7 +274,7 @@
             });
 
             // 开始20秒倒计时
-            startCountdown(10);
+            startCountdown(20);
         }
 
         // 倒计时逻辑
